--- a/ColorTool/index.html
+++ b/ColorTool/index.html
@@ -10,9 +10,9 @@
   .color-display {
   	width:  100%;
   	height: 50px;
+  	line-height: 50px;
   }
 </style>
-<script src="colors.js" ></script>
 <script>
 	var body = document.getElementById("mainContainer")
 	var count = {}
@@ -20,6 +20,7 @@
 		let value = document.getElementById("pallete-input").value
 		value = value + "ENDSENTENCE";
 		value = value.replace(/(\r\n|\n|\r)/gm,"")
+		
 		value = value.replace(/<Property value="Colour.xml">/g,"{\"header\":\"Colour\",") 
 		value = value.replace(/<Property name="SkyUpperColour" value="Colour.xml">/g,"{\"header\":\"SkyUpperColour\",") 
 		value = value.replace(/<Property name="SkyColour" value="Colour.xml">/g,"{\"header\":\"SkyColour\",") 
@@ -66,7 +67,7 @@
 			node.setAttribute("class", "color-display");
 			if(!count[element.header]) count[element.header] = 0;
 			count[element.header]++;
-			node.innerHTML =  "[ "+ count[element.header] + " ]"+ element.header  + " ( R: " +element.r +
+			node.innerHTML =  " [ "+ count[element.header] + " ] "+ element.header  + " ( R: " +element.r +
 								", G: " +element.g +
 								", B: " +element.b +
 								", A: " +element.a + ")";
@@ -74,7 +75,7 @@
 		});
 	}
 </script>
-<body onload="main()">
+<body >
 	<div> 
 		Insert Color Pallete Data
 		<textarea id="pallete-input"></textarea>
